gke-cluster-repo/manifests/db-sonar.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-postgres
  namespace: default
  labels:
    app: sonar-postgres
spec:
  ports:
  - port: 5432
    name: sonar-postgres
  selector:
    app: sonar-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-postgres
  namespace: default
  labels:
    app: sonar-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar-postgres
  template:
    metadata:
      labels:
        app: sonar-postgres
    spec:
      containers:
      - name: sonar-postgres
        image: postgres
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: sonar-db-postgres-volume
          mountPath: /bitnami/postgresql
      volumes:
      - name: sonar-db-postgres-volume
        persistentVolumeClaim:
          claimName: sonar-postgres-pvc
---
