gke-cluster-repo/manifests/db-statefulset-pvc-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
spec:
  selector:
    matchLabels:
      app: postgres
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        version: v1
    spec:
      containers:
      - name: db-postgres
        image: postgres:13.2
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-pvc
          mountPath: "/var/lib/postgresql/data-new"
  volumeClaimTemplates:
  - metadata:
      name: db-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgres
    version: v1
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
