gke-cluster-repo/manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /sonar/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sonar-svc
            port:
              number: 9000
      - path: /app/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 80
